<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF10" Id="{cad9348f-c567-4fd3-ada1-86b0e603bb63}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF10
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_3;
    FB_Bacnet_b : FB_BACnet_DAIKIN_MasterStation_III_No_2;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..24] OF AC_Unit_Status;
	aPrevState : ARRAY[1..24] OF BOOL := [FALSE(*24*)];
	bInitEvent1: BOOL;
	bSend: BOOL;
	i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_064.bPresVal;
aUnits[1].sUnitName := 'F10-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_065.bPresVal;
aUnits[2].sUnitName := 'F10-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_066.bPresVal;
aUnits[3].sUnitName := 'F10-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_067.bPresVal;
aUnits[4].sUnitName := 'F10-A4 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_068.bPresVal;
aUnits[5].sUnitName := 'F10-B1 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_069.bPresVal;
aUnits[6].sUnitName := 'F10-B2 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_070.bPresVal;
aUnits[7].sUnitName := 'F10-C1 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_071.bPresVal;
aUnits[8].sUnitName := 'F10-C2 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_072.bPresVal;
aUnits[9].sUnitName := 'F10-D1 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_073.bPresVal;
aUnits[10].sUnitName := 'F10-D2 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_074.bPresVal;
aUnits[11].sUnitName := 'F10-D3 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_075.bPresVal;
aUnits[12].sUnitName := 'F10-D4 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_076.bPresVal;
aUnits[13].sUnitName := 'F10-D5 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_077.bPresVal;
aUnits[14].sUnitName := 'F10-D6 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_078.bPresVal;
aUnits[15].sUnitName := 'F10-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_079.bPresVal;
aUnits[16].sUnitName := 'F10-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_080.bPresVal;
aUnits[17].sUnitName := 'F10-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_081.bPresVal;
aUnits[18].sUnitName := 'F10-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_082.bPresVal;
aUnits[19].sUnitName := 'F10-G1 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_083.bPresVal;
aUnits[20].sUnitName := 'F10-G2 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_084.bPresVal;
aUnits[21].sUnitName := 'F10-G3 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_112.bPresVal;
aUnits[22].sUnitName := 'F10-IT1 (4-00)';
//aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_241.bPresVal;
aUnits[23].sUnitName := 'F10-IT2 (4-01)';
aUnits[24].bPresVal := FB_Bacnet.StartStopStatus_226.bPresVal;
aUnits[24].sUnitName := 'F10-Lobi (3-02)';

FOR i := 1 TO 20 DO
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sEventMessage := CONCAT(aUnits[i].sUnitName, ' is turned ON');
        ELSE
            sEventMessage := CONCAT(aUnits[i].sUnitName, ' is turned OFF');
        END_IF

        // Log the event to TwinCAT EventLogger
        ADSLOGEVENT(ADR(sEventMessage), SIZEOF(sEventMessage), TCEVENTCLASS_ALARM, i, 0);

        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

IF bInitEvent1 THEN
	bInitEvent1 := FALSE;
	fbMsg.CreateEx(TC_EVENTS.UnitF10Status.EventF10, 0);
	fbMsg.ipArguments.AddString(aUnits[1].sUnitName + ' is Turned ON');
	fbMsg.Send(0);
END_IF

IF bSend THEN
	bSend := FALSE;
	fbMsg.Send(0);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF10">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="14" />
      <LineId Id="99" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="71" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="75" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>