<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF12" Id="{51178124-76fd-4e17-b9b4-e2a3dd27fca1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF12
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_3;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..24] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..24] OF BOOL := [FALSE(*24*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_192.bPresVal;
//aUnits[1].sUnitName := 'F12-A1 (1-00)';
//aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_193.bPresVal;
//aUnits[2].sUnitName := 'F12-A2 (1-01)';
//aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_194.bPresVal;
//aUnits[3].sUnitName := 'F12-A3 (1-02)';
//aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_195.bPresVal;
//aUnits[4].sUnitName := 'F12-A4 (1-03)';
//aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_196.bPresVal;
//aUnits[5].sUnitName := 'F12-A5 (1-04)';
//aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_197.bPresVal;
//aUnits[6].sUnitName := 'F12-A6 (1-05)';
//aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_198.bPresVal;
//aUnits[7].sUnitName := 'F12-B1 (1-06)';
//aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_199.bPresVal;
//aUnits[8].sUnitName := 'F12-B2 (1-07)';
//aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_200.bPresVal;
//aUnits[9].sUnitName := 'F12-C1 (1-08)';
//aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_201.bPresVal;
//aUnits[10].sUnitName := 'F12-C2 (1-09)';
//aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_202.bPresVal;
//aUnits[11].sUnitName := 'F12-D1 (1-10)';
//aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_203.bPresVal;
//aUnits[12].sUnitName := 'F12-D2 (1-11)';
//aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_204.bPresVal;
//aUnits[13].sUnitName := 'F12-D3 (1-12)';
//aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_205.bPresVal;
//aUnits[14].sUnitName := 'F12-D4 (1-13)';
//aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_206.bPresVal;
//aUnits[15].sUnitName := 'F12-E1 (1-14)';
//aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_207.bPresVal;
//aUnits[16].sUnitName := 'F12-E2 (1-15)';
//aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_208.bPresVal;
//aUnits[17].sUnitName := 'F12-E3 (2-00)';
//aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_209.bPresVal;
//aUnits[18].sUnitName := 'F12-F1 (2-01)';
//aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_210.bPresVal;
//aUnits[19].sUnitName := 'F12-F2 (2-02)';
//aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_211.bPresVal;
//aUnits[20].sUnitName := 'F12-G1 (2-03)';
//aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_212.bPresVal;
//aUnits[21].sUnitName := 'F12-G2 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_224.bPresVal;
aUnits[22].sUnitName := 'F12-Lobi (3-00)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_225.bPresVal;
aUnits[23].sUnitName := 'F12-LMR-1 (3-01)';
aUnits[24].bPresVal := FB_Bacnet.StartStopStatus_226.bPresVal;
aUnits[24].sUnitName := 'F12-LMR-2 (3-02)';


FOR i := 1 TO 24 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF12">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="101" Count="5" />
      <LineId Id="147" Count="2" />
      <LineId Id="161" Count="0" />
      <LineId Id="65" Count="3" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>