<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF29" Id="{2e7624e7-f4ab-42c1-b8f7-7b1c77f03309}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF29
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_7;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..23] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..23] OF BOOL := [FALSE(*23*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_128.bPresVal;
aUnits[1].sUnitName := 'F29-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_129.bPresVal;
aUnits[2].sUnitName := 'F29-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_130.bPresVal;
aUnits[3].sUnitName := 'F29-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_131.bPresVal;
aUnits[4].sUnitName := 'F29-A4 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_132.bPresVal;
aUnits[5].sUnitName := 'F29-B1 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_133.bPresVal;
aUnits[6].sUnitName := 'F29-B2 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_134.bPresVal;
aUnits[7].sUnitName := 'F29-C1 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_135.bPresVal;
aUnits[8].sUnitName := 'F29-C2 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_136.bPresVal;
aUnits[9].sUnitName := 'F29-D1 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_137.bPresVal;
aUnits[10].sUnitName := 'F29-D2 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_138.bPresVal;
aUnits[11].sUnitName := 'F29-D3 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_139.bPresVal;
aUnits[12].sUnitName := 'F29-D4 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_140.bPresVal;
aUnits[13].sUnitName := 'F29-E1 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_141.bPresVal;
aUnits[14].sUnitName := 'F29-E2 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_142.bPresVal;
aUnits[15].sUnitName := 'F29-E3 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_143.bPresVal;
aUnits[16].sUnitName := 'F29-F1 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_144.bPresVal;
aUnits[17].sUnitName := 'F29-F2 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_145.bPresVal;
aUnits[18].sUnitName := 'F29-G1 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_146.bPresVal;
aUnits[19].sUnitName := 'F29-G2 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_147.bPresVal;
aUnits[20].sUnitName := 'F29-H (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_148.bPresVal;
aUnits[21].sUnitName := 'F29-LMR-1 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_149.bPresVal;
aUnits[22].sUnitName := 'F29-LMR-2 (2-05)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_226.bPresVal;
aUnits[23].sUnitName := 'F29-Lobi (3-02)';

FOR i := 1 TO 23 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF29">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="3" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>