<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF32" Id="{a149af19-66f2-4622-8b36-92d795d2ec3d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF32
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_8;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..23] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..23] OF BOOL := [FALSE(*23*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_064.bPresVal;
aUnits[1].sUnitName := 'F32-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_065.bPresVal;
aUnits[2].sUnitName := 'F32-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_066.bPresVal;
aUnits[3].sUnitName := 'F32-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_067.bPresVal;
aUnits[4].sUnitName := 'F32-B1 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_068.bPresVal;
aUnits[5].sUnitName := 'F32-B2 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_069.bPresVal;
aUnits[6].sUnitName := 'F32-C1 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_070.bPresVal;
aUnits[7].sUnitName := 'F32-C2 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_071.bPresVal;
aUnits[8].sUnitName := 'F32-C3 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_072.bPresVal;
aUnits[9].sUnitName := 'F32-C4 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_073.bPresVal;
aUnits[10].sUnitName := 'F32-C5 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_074.bPresVal;
aUnits[11].sUnitName := 'F32-D1 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_075.bPresVal;
aUnits[12].sUnitName := 'F32-D2 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_076.bPresVal;
aUnits[13].sUnitName := 'F32-D3 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_077.bPresVal;
aUnits[14].sUnitName := 'F32-D4 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_078.bPresVal;
aUnits[15].sUnitName := 'F32-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_079.bPresVal;
aUnits[16].sUnitName := 'F32-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_080.bPresVal;
aUnits[17].sUnitName := 'F32-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_081.bPresVal;
aUnits[18].sUnitName := 'F32-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_082.bPresVal;
aUnits[19].sUnitName := 'F32-F3 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_083.bPresVal;
aUnits[20].sUnitName := 'F32-F4 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_084.bPresVal;
aUnits[21].sUnitName := 'F32-F5 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_085.bPresVal;
aUnits[22].sUnitName := 'F32-F6 (2-05)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_225.bPresVal;
aUnits[23].sUnitName := 'F32-Lobi (3-01)';

FOR i := 1 TO 23 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF32">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>