<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF5" Id="{2aa61264-b16e-43ec-8869-a8053cec186d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF5
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_2;
    FB_Bacnet_b : FB_BACnet_DAIKIN_MasterStation_III_No_1;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..22] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..22] OF BOOL := [FALSE(*22*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_000.bPresVal;
aUnits[1].sUnitName := 'F5-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_001.bPresVal;
aUnits[2].sUnitName := 'F5-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_002.bPresVal;
aUnits[3].sUnitName := 'F5-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_003.bPresVal;
aUnits[4].sUnitName := 'F5-A4 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_004.bPresVal;
aUnits[5].sUnitName := 'F5-B1 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_005.bPresVal;
aUnits[6].sUnitName := 'F5-B2 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_006.bPresVal;
aUnits[7].sUnitName := 'F5-C1 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_007.bPresVal;
aUnits[8].sUnitName := 'F5-C2 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_008.bPresVal;
aUnits[9].sUnitName := 'F5-D1 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_009.bPresVal;
aUnits[10].sUnitName := 'F5-D2 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_010.bPresVal;
aUnits[11].sUnitName := 'F5-D3 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_011.bPresVal;
aUnits[12].sUnitName := 'F5-D4 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_012.bPresVal;
aUnits[13].sUnitName := 'F5-D5 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_013.bPresVal;
aUnits[14].sUnitName := 'F5-D6 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_014.bPresVal;
aUnits[15].sUnitName := 'F5-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_015.bPresVal;
aUnits[16].sUnitName := 'F5-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_016.bPresVal;
aUnits[17].sUnitName := 'F5-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_017.bPresVal;
aUnits[18].sUnitName := 'F5-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_018.bPresVal;
aUnits[19].sUnitName := 'F5-G1 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_019.bPresVal;
aUnits[20].sUnitName := 'F5-G2 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_020.bPresVal;
aUnits[21].sUnitName := 'F5-G3 (2-04)';
aUnits[22].bPresVal := FB_Bacnet_b.StartStopStatus_225.bPresVal;
aUnits[22].sUnitName := 'F5-Lobi (3-01)';

FOR i := 1 TO 22 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF5">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="101" Count="5" />
      <LineId Id="147" Count="2" />
      <LineId Id="161" Count="0" />
      <LineId Id="111" Count="3" />
    </LineIds>
  </POU>
</TcPlcObject>