<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF53" Id="{ae9e02db-b8c4-4aaa-9c33-6f3cae6a426a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF53
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_10;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..25] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..25] OF BOOL := [FALSE(*25*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_192.bPresVal;
aUnits[1].sUnitName := 'F53-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_193.bPresVal;
aUnits[2].sUnitName := 'F53-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_194.bPresVal;
aUnits[3].sUnitName := 'F53-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_195.bPresVal;
aUnits[4].sUnitName := 'F53-B1 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_196.bPresVal;
aUnits[5].sUnitName := 'F53-B2 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_197.bPresVal;
aUnits[6].sUnitName := 'F53-C1 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_198.bPresVal;
aUnits[7].sUnitName := 'F53-C2 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_199.bPresVal;
aUnits[8].sUnitName := 'F53-C3 (1-07)';
//aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_200.bPresVal;
//aUnits[9].sUnitName := 'F53-C4 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_201.bPresVal;
aUnits[10].sUnitName := 'F53-C5 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_202.bPresVal;
aUnits[11].sUnitName := 'F53-D1 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_203.bPresVal;
aUnits[12].sUnitName := 'F53-D2 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_204.bPresVal;
aUnits[13].sUnitName := 'F53-D3 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_205.bPresVal;
aUnits[14].sUnitName := 'F53-D4 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_206.bPresVal;
aUnits[15].sUnitName := 'F53-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_207.bPresVal;
aUnits[16].sUnitName := 'F53-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_208.bPresVal;
aUnits[17].sUnitName := 'F53-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_209.bPresVal;
aUnits[18].sUnitName := 'F53-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_210.bPresVal;
aUnits[19].sUnitName := 'F53-F3 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_211.bPresVal;
aUnits[20].sUnitName := 'F53-F4 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_212.bPresVal;
aUnits[21].sUnitName := 'F53-F5 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_213.bPresVal;
aUnits[22].sUnitName := 'F53-F6 (2-05)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_242.bPresVal;
aUnits[23].sUnitName := 'F53-IT-1 (4-02)';
aUnits[24].bPresVal := FB_Bacnet.StartStopStatus_243.bPresVal;
aUnits[24].sUnitName := 'F53-IT-2 (4-03)';
aUnits[25].bPresVal := FB_Bacnet.StartStopStatus_237.bPresVal;
aUnits[25].sUnitName := 'F53-Lobi (3-13)';

FOR i := 1 TO 25 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF53">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>