<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventFB1" Id="{f9242a85-28b1-459b-9d0a-9d24c7557de4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventFB1
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_1;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..17] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..17] OF BOOL := [FALSE(*17*)];
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_020.bPresVal;
aUnits[1].sUnitName := 'FB1-1 (2-04)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_021.bPresVal;
aUnits[2].sUnitName := 'FB1-2 (2-05)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_022.bPresVal;
aUnits[3].sUnitName := 'FB1-3 (2-06)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_023.bPresVal;
aUnits[4].sUnitName := 'FB1-4 (2-07)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_024.bPresVal;
aUnits[5].sUnitName := 'FB1-5 (2-08)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_025.bPresVal;
aUnits[6].sUnitName := 'FB1-6 (2-09)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_026.bPresVal;
aUnits[7].sUnitName := 'FB1-7 (2-10)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_027.bPresVal;
aUnits[8].sUnitName := 'FB1-8 (2-11)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_028.bPresVal;
aUnits[9].sUnitName := 'FB1-9 (2-12)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_029.bPresVal;
aUnits[10].sUnitName := 'FB1-10 (2-13)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_030.bPresVal;
aUnits[11].sUnitName := 'FB1-11 (2-14)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_031.bPresVal;
aUnits[12].sUnitName := 'FB1-12 (2-15)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_032.bPresVal;
aUnits[13].sUnitName := 'FB1-13 (3-00)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_033.bPresVal;
aUnits[14].sUnitName := 'FB1-14 (3-01)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_034.bPresVal;
aUnits[15].sUnitName := 'FB1-15 (3-02)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_035.bPresVal;
aUnits[16].sUnitName := 'FB1-Lobi-1 (3-03)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_036.bPresVal;
aUnits[17].sUnitName := 'FB1-Lobi-2 (3-04)';

FOR i := 1 TO 17 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventFB1">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="101" Count="5" />
    </LineIds>
  </POU>
</TcPlcObject>